fix: 修复样式z-index问题 # Reviewed, transaction id: 27072

--- a/bklog/web/src/views/retrieve-v2/index.scss
+++ b/bklog/web/src/views/retrieve-v2/index.scss
@@ -103,7 +103,7 @@
       position: relative;
       position: sticky;
       top: 8px;
-      z-index: 2;
+      z-index: 3;
 
       align-self: start;
       overflow: visible;
