--- a/bklog/web/src/views/retrieve-v2/search-result-panel/log-result/log-rows.scss
+++ b/bklog/web/src/views/retrieve-v2/search-result-panel/log-result/log-rows.scss
@@ -300,7 +300,7 @@
     &.row-header {
       position: sticky;
       top: 0;
-      z-index: 1;
+      z-index: 2;
       box-sizing: border-box;
       width: fit-content;
       min-width: 100%;
@@ -325,6 +325,18 @@
           }
         }
 
+        &::after {
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: var(--last-column-left);
+          width: var(--padding-right);
+          content: '';
+          background-color: #fff;
+        }
+      }
+
+      .expand-view-wrapper {
         &::after {
           position: absolute;
           top: 0;
